@@ -1,9 +1,14 @@
+hdparm-7.4
+	- ignore ENOTTY response from DRIVE_CMD(NULL)
+	- decode CFA advanced timing information
 hdparm-7.3
 	- fixed spelling of --drq-hsm-error in -h output
 	- fixed SG_IO CDB[2] bits for better SAT compliance
 	- fixed version number (v7.2 has "7.1" as version, doh!)
 	- added #ifdef around use of BLKGETSIZE64
 	- manpage updated
+	- flush_cache before/after -W0 action
+	- use O_RDWR instead of O_RDONLY for better SG_IO compatibility
 hdparm-7.2
 	- tweak -C
 	- added more debug info from --verbose
